syntax="proto3";
option java_package="com.example.finaldemo.proto.entity";
option java_multiple_files=true;
import "entity/userEntity.proto";
import "entity/userAssetEntity.proto";

message UserAssetEntityResponseDto{
  UserEntity user=1;
  UserAssetEntityList user_asset_entity_list=2;
}
